# socks5

./: .gitignore  README.md  Socks5.py  pyproject.toml  test.py
socks5/: types.py  utils.py  values.py
socks5/client/: core.py
socks5/server/: __init__.py  __main__.py  _socks5.py  authentications.py  core.py  exceptions.py  server.py  sessions.py
