[tool.poetry]
name = "asyncio-socks5"
version = "0.1.7"
description = "Socks5 Server/Client by asyncio."
authors = ["abersheeran <me@abersheeran.com>"]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/abersheeran/socks5"
repository = "https://github.com/abersheeran/socks5"
documentation = "https://github.com/abersheeran/socks5"
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

packages = [
    { include = "socks5" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
pysocks = "^1.7.1"
pytest = "^5.3.2"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
